<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        layout="@layout/toolbar_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/screen_border_distance">

        <android.support.design.widget.TextInputLayout style="@style/FormField">

            <EditText
                android:id="@+id/search_last_name"
                style="@style/FormField"
                android:hint="@string/last_name" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout style="@style/FormField">

            <EditText
                android:id="@+id/search_first_name"
                style="@style/FormField"
                android:hint="@string/first_name" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/search_btn"
            style="@style/FormButton"
            android:onClick="search"
            android:layout_gravity="center"
            android:text="@string/show_all_patients" />
    </LinearLayout>
</LinearLayout>